<resources>
    <string name="app_name">Quiz Application</string>
    <string name="question">Question</string>
    <string name="progressmax">/10</string>
    <string name="quiz_image_desc">Quiz Image</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="btnNo">No</string>
    <string name="btnYes">Yes</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="e_g_john">e.g. John</string>
    <string name="start">Start</string>
</resources>